# toxicity-moderation

./: .gitignore  README.md  main.py  pyproject.toml  utils.py
data/prompts/: toxicity-classification-prompt.txt
data/responses/: response_0221bbaf-d548-4026-8713-ac1dfee99940.txt  response_1111647a-7cbc-489a-938e-f53107c9a389.txt  response_20559f3c-4fc0-4860-8388-d220dbe63d44.txt  response_26003f2d-6794-4999-b6bf-799eb963c775.txt  response_3702f6b8-9f3a-4c1c-8f22-42742d16566a.txt  response_3f9be665-c4c5-4e64-b6d2-c6617c9cf2cd.txt  response_4864b0f4-462a-4ca4-91e9-4611538785b7.txt  response_5d16e5ff-cfad-45e3-88ad-776476375200.txt  response_6d8fad14-354b-4a83-b91c-bafd611ae534.txt  response_6f91b090-c7fd-4f0c-aad4-51d0009c00a1.txt  response_7b0fd517-3e4e-4b72-8308-e5d0f1501f7e.txt  response_876e2a68-f8ac-4e63-8a48-1639f7303cca.txt  response_8b7efddb-a7d1-4c24-b17b-42c9bc95d61e.txt  response_a6ef33bf-f235-4fda-ad7c-75e84ec7d6ce.txt  response_a8cfda86-f1c4-4fcd-ad47-eb70547a9ce4.txt  response_d71e851a-3be8-4650-95cf-8db19e1a0b8f.txt  response_eccdc2a0-8059-43ce-9dab-a21320afb68b.txt  response_f92dbed0-86ff-4178-99ce-7c52878742b0.txt
datamodels/: LocalPersistenceService.py  StorageInterface.py  ToxicityModerationService.py  TranscriberInterface.py  WhisperTranscriberService.py
llms/: LLMProvider.py  LLMService.py  OllamaService.py  OpenAIService.py
schemas/clients/: Client.py  (+1 more)
storage/: LocalPersistenceService.py
toxicitymoderation/: ToxicityModerationService.py
transcriber/: transcription.py
transcription/: TranscriberService.py  WhisperTranscriberService.py
(+15 files in other folders)
