[tool.poetry]
name = "toxicity-moderation"
version = "0.1.0"
description = ""
authors = ["Eren-Ajani Tshimanga <eren.tish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.43.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
